test/pending/neg/plugin-rightafter-terminal/lib/plugins.jar.desired.sha1
8cccde4914da2058dca893783c231cda23855603 ?plugins.jar
